# phoenix_directors_reimbursements

./: .gitignore  HISTORY.md  justfile  pyproject.toml  requirements.txt
.gitA/: COMMIT_EDITMSG  index
.gitA/logs/refs/heads/: master
.gitA/refs/heads/: master
src/directors_reimbursements/: __init__.py  common.py  config.py  constants.py  emails.py  main.py  main_menu.py  module_caller.py  process.py  requirements.txt  root.py  text.py
src/directors_reimbursements/forms/: frm_config.py  frm_main.py  frm_output.py  frm_report.py
tests/: test_version.py
