[project]
name = "directors-reimbursements"
version = "0.0.1"
description = "Create director's reimbursements for Phoenix Bridge Club"
authors = [{name = "Jeff", "email" = "<jeffwatkins2000@gmail.com>"}]
readme = "README.md"
requires-python = '>=3.13'

include = [
    "HISTORY.md",
    "src/directors_reimbursements/images/*.png",
    "src/directors_reimbursements/images/*.ico",
    ]

dependencies = [
    "appdirs>=1.4.4",
    "clipboard>=0.0.4",
    "icecream>=2.1.5",
    "openpyxl>=3.1.5",
    "psiutils>=0.1.64",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = ['pytest']

[build-system]
requires = ['uv-build']
build-backend = 'uv_build'
