[project]
name = "directors-reimbursements"
version = "0.0.1"
description = "Create director's reimbursements for Phoenix Bridge Club"
authors = [{name = "Jeff", "email" = "<jeffwatkins2000@gmail.com>"}]
readme = "README.md"
requires-python = '>=3.13'

include = [
    "HISTORY.md",
    "src/directors_reimbursements/images/*.png",
    "src/directors_reimbursements/images/*.ico",
    ]

dependencies = [
    "appdirs>=1.4.4",
    "asttokens>=3.0.0",
    "clipboard>=0.0.4",
    "colorama>=0.4.6",
    "et-xmlfile>=2.0.0",
    "executing>=2.2.0",
    "icecream>=2.1.5",
    "iniconfig>=2.1.0",
    "markdown>=3.8.2",
    "openpyxl>=3.1.5",
    "packaging>=25.0",
    "pillow>=11.3.0",
    "pluggy>=1.6.0",
    "psi-toml>=0.0.12",
    "psiconfig>=0.0.14",
    "psiutils>=0.1.67",
    "pygments>=2.19.2",
    "pyperclip>=1.9.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "six>=1.17.0",
    "structlog>=25.4.0",
    "tkinterweb>=4.4.4",
    "tkinterweb-tkhtml>=1.1.1",
]

[dependency-groups]
dev = ['pytest']

[build-system]
requires = ['uv-build']
build-backend = 'uv_build'
